--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
                 </li>
             </ul>
 
-
         <img src="imagens/Logo.svg" alt="logo da Alurabooks" class="container__imagem">
         </div>
 
@@ -59,55 +58,105 @@
         <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
     </section>
 
+    <!--carrossel-->
     <section class="carrossel">
         <h2 class="carrossel__titulo">Novos lançamentos</h2>
-       <!--carrossel-->
         <!-- Slider main container -->
-<div class="swiper">
-    <!-- Additional required wrapper -->
-    <!-- If we need pagination -->
-    <div class="swiper-pagination"></div>
-    <div class="swiper-wrapper">
-      <!-- Slides -->
-      <div class="swiper-slide"><img src="imagens/ApacheKafka.svg" alt="Livro sobre apache kafka e spring boot da alura books"></div>
-      <div class="swiper-slide"><img src="imagens/Lideranc╠ºa.svg" alt="Livro sobre liderança em design da alura books"></div>
-      <div class="swiper-slide"><img src="imagens/Javascript.svg" alt="Livro sobre javascript assertivo da alurabooks"></div>
-      <div class="swiper-slide"><img src="imagens/Guia Front-end.svg" alt="Livro Guia front end"></div>
-      <div class="swiper-slide"><img src="imagens/Portugol.svg" alt="Livro sobre portugol"></div>
-      <div class="swiper-slide"><img src="imagens/Acessibilidade.svg" alt="Livro sobre acessibilidade"></div>
-    </div>
-    
+        <div class="swiper">
+            <!-- Additional required wrapper -->
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+            <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide"><img src="imagens/ApacheKafka.svg" alt="Livro sobre apache kafka e spring boot da alura books"></div>
+                <div class="swiper-slide"><img src="imagens/Lideranc╠ºa.svg" alt="Livro sobre liderança em design da alura books"></div>
+                <div class="swiper-slide"><img src="imagens/Javascript.svg" alt="Livro sobre javascript assertivo da alurabooks"></div>
+                <div class="swiper-slide"><img src="imagens/Guia Front-end.svg" alt="Livro Guia front end"></div>
+                <div class="swiper-slide"><img src="imagens/Portugol.svg" alt="Livro sobre portugol"></div>
+                <div class="swiper-slide"><img src="imagens/Acessibilidade.svg" alt="Livro sobre acessibilidade"></div>
+            </div>
   
-    <!-- If we need navigation buttons -->
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-button-next"></div>
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
   
-  </div>
-
-  <div class="card">
-    <!--1º linha-->
-    <div class="card__descrição">
-        <!--1º coluna-->
-        <div class="descrição">
-            <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
-            <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
-            <p class="descrição__texto">Construindo uma aplicação integrada com a plataforma do Google </p>
         </div>
-        <!-- 2º coluna-->
-        <img src="imagens/Angular.svg"  alt="angular" class="descrição__imagem">
-    </div>
 
-    <!--2º linha-->
-    <div class="card__botões">
-         <!-- 1º coluna-->
-        <ul class="botões">
-            <li class="botões__item"><img src="imagens/Favoritos.svg" alt="Favoritar livro"></li>
-            <li class="botões__item"><img src="imagens/Compras.svg" alt="Adicionar no carrinho de compras"></li>
-        </ul>
-         <!-- 2º coluna-->
-         <a href="#" class="botões__ancora">Saiba mais</a>
-    </div>
-  </div>
+        <div class="card">
+         <!--1º linha-->
+            <div class="card__descrição">
+                <!--1º coluna-->
+                <div class="descrição">
+                    <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
+                    <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
+                    <p class="descrição__texto">Construindo uma aplicação integrada com a plataforma do Google </p>
+                </div>
+                <!-- 2º coluna-->
+                <img src="imagens/Angular.svg"  alt="angular" class="descrição__imagem">
+            </div>
+
+            <!--2º linha-->
+            <div class="card__botões">
+                <!-- 1º coluna-->
+                <ul class="botões">
+                    <li class="botões__item"><img src="imagens/Favoritos.svg" alt="Favoritar livro"></li>
+                    <li class="botões__item"><img src="imagens/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+                </ul>
+                <!-- 2º coluna-->
+                <a href="#" class="botões__ancora">Saiba mais</a>
+            </div>
+        </div>
+    </section>
+
+   <!--SEGUNDO CARROSSEL-->
+    <section class="carrossel">
+        <h2 class="carrossel__titulo">Novos lançamentos</h2>
+        <!-- Slider main container -->
+        <div class="swiper">
+            <!-- Additional required wrapper -->
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+            <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide"><img src="imagens/Guia Front-end.svg" alt="Livro Guia front end"></div>
+                <div class="swiper-slide"><img src="imagens/Portugol.svg" alt="Livro sobre portugol"></div>
+                <div class="swiper-slide"><img src="imagens/Acessibilidade.svg" alt="Livro sobre acessibilidade"></div>
+                <div class="swiper-slide"><img src="imagens/ApacheKafka.svg" alt="Livro sobre apache kafka e spring boot da alura books"></div>
+                <div class="swiper-slide"><img src="imagens/Lideranc╠ºa.svg" alt="Livro sobre liderança em design da alura books"></div>
+                <div class="swiper-slide"><img src="imagens/Javascript.svg" alt="Livro sobre javascript assertivo da alurabooks"></div>
+            </div>
+  
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+  
+        </div>
+
+        <div class="card">
+         <!--1º linha-->
+            <div class="card__descrição">
+                <!--1º coluna-->
+                <div class="descrição">
+                    <h3><img src="imagens/Estrelinhas.svg" alt="Avaliação 5 estrelas"></h3>
+                    <h3 class="descrição__titulo">Autora do mês</h3>
+                    <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
+                    <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End. </p>
+                </div>
+                <!-- 2º coluna-->
+                <img src="imagens/Escritora.svg"  alt="imagem-escritora" class="descrição__imagem">
+            </div>
+
+            <!--2º linha-->
+            <div class="card__botões">
+                <!-- 1º coluna-->
+                <ul class="botões">
+                    <li class="botões__item"><img src="imagens/Favoritos.svg" alt="Favoritar livro"></li>
+                    <li class="botões__item"><img src="imagens/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+                </ul>
+                <!-- 2º coluna-->
+                <a href="#" class="botões__ancora">Saiba mais</a>
+            </div>
+        </div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
