tela para desktop

--- a/index.html
+++ b/index.html
@@ -75,8 +75,14 @@
 
         <div class="container">
         <a href="#"><img src="imagens/Favoritos.svg" alt="Meus favoritos" class="container__imagem container__imagem-transparente"></a>
-        <a href="#"><img src="imagens/Compras.svg" alt="Carrinhos de Compras" class="container__imagem"></a>
-        <a href="#"><img src="imagens/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
+        <a href="#" class="container__link">
+            <img src="imagens/Compras.svg" alt="Carrinhos de Compras" class="container__imagem">
+            <p class="container__texto">Minha Sacola</p>
+        </a>
+        <a href="#" class="container__link">
+            <img src="imagens/Usuario.svg" alt="Meu perfil" class="container__imagem">
+            <p class="container__texto">Meu Perfil</p>
+        </a>
         
         </div>
     </header>
@@ -91,6 +97,7 @@
     <section class="carrossel">
         <h2 class="carrossel__titulo">Novos lançamentos</h2>
         <!-- Slider main container -->
+        <div class="carrossel__container">
         <div class="swiper">
             <!-- Additional required wrapper -->
             <!-- If we need pagination -->
@@ -135,12 +142,14 @@
                 <a href="#" class="botões__ancora">Saiba mais</a>
             </div>
         </div>
+    </div>
     </section>
 
    <!--SEGUNDO CARROSSEL-->
     <section class="carrossel">
         <h2 class="carrossel__titulo">Mais Vendidos</h2>
         <!-- Slider main container -->
+        <div class="carrossel__container">
         <div class="swiper">
             <!-- Additional required wrapper -->
             <!-- If we need pagination -->
@@ -186,6 +195,7 @@
                 <a href="#" class="botões__ancora">Saiba mais</a>
             </div>
         </div>
+    </div>
     </section>
 
     <section class="tópicos">
