--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header class="cabeçalho">
         <div class="container">
             <input type="checkbox" id="menu" class="container__botao">
-            <label for="menu">
+            <label for="menu" class="container__rotulo">
                 <span class="cabeçalho__menu-hamburguer container__imagem" ></span>
             </label>
 
@@ -46,7 +47,7 @@
 
         <ul class="opções">
             <input type="checkbox" id="opções__menu" class="opções__botão">
-            <label for="opções__menu">
+            <label for="opções__menu" class="opções__rotulo">
                 <li class="opções__item">Categorias</li>
             </label>
 
